--- a/tv_table.html
+++ b/tv_table.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <table>
-	<caption>My Favorite TV Shows</caption>
+<caption>
+	<h1>My Favorite TV Shows</h1>
+</caption>
 	<tr>
 	
 		
@@ -14,13 +16,13 @@
 	<tr>
 		<th>Title</th>
 		<th>Creator</th>
-		<th>Start Date of Original Run</th>
-		<th>End Date of Original Run</th>
+		<th>Start Date </th>
+		<th>End Date </th>
 		<th>Number of Episodes</th>
 		<th>Source</th>
 	</tr>
 	<tr>
-		<td>Friends</th>
+		<td> <a href="http://www.youtube.com/watch?v=34UxfbG5J-U">Friends</a></th>
 		<td>David Crane and Marta Kauffman</td>
 		<td>September 22, 1994</td>
 		<td>May 6, 2004</td>
@@ -28,7 +30,7 @@
 		<td> <a href="http://en.wikipedia.org/wiki/Friends">Wikipedia Page</a></td>
 	</tr>
 	<tr>
-		<td>How I Met Your Mother</td>
+		<td> <a href="http://www.youtube.com/watch?v=96WlRGJ_Wxs">How I Met Your Mother</a></td>
 		<td>Craig Thomas and Carter Bays</td>
 		<td>September 19, 2005</td>
 		<td>March 31, 2014</td>
@@ -36,7 +38,7 @@
 		<td> <a href="http://en.wikipedia.org/wiki/How_I_Met_Your_Mother">Wikipedia Page</a></td>
 	</tr>
 	<tr>
-		<td>Law & Order</td>
+		<td> <a href="http://www.youtube.com/watch?v=9L6wYeXs4DY">Law & Order</a></td>
 		<td>Dick Wolf</td>
 		<td>September 13, 1990</td>
 		<td>Ongoing</td>
@@ -44,16 +46,22 @@
 		<td> <a href="http://en.wikipedia.org/wiki/Law_%26_Order">Wikipedia Page</a></td>
 	</tr>
 	<tr>
-		<td>Parks and Recreation</td>
-		<td></td>
+		<td> <a href="http://www.youtube.com/watch?v=Ish8NBunrQU">Parks and Recreation</a></td>
+		<td>Greg Daniels and Michael Schur</td>
 		<td>April 9, 2009</td>
 		<td>Ongoing</td>
 		<td>112</td>
-		<td></td>
+		<td> <a href="http://en.wikipedia.org/wiki/Parks_and_Recreation">Wikipedia Page</a></td>
 	</tr>
 	<tr>
-		<td>The Nanny</td>
+		<td> <a href="http://www.youtube.com/watch?v=xB5Lx8DS-sk">The Nanny</a></td>
+		<td>Fran Drescher and Peter Marc Jacobson</td>
+		<td>November 3, 1993</td>
+		<td>June 24, 1999</td>
+		<td>146</td>
+		<td> <a href="http://en.wikipedia.org/wiki/The_Nanny">Wikipedia Page</a></td>
 	</tr>
+	</table>
 	
 		
 
